--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,8 @@
       "@/*": [
         "./*"
       ]
-    }
+    },
+    "strictPropertyInitialization": false
   },
   "include": [
     "**/*.ts",
