--- a/app.json
+++ b/app.json
@@ -40,6 +40,12 @@
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera. This will be used purely for gemstone identification."
         }
+      ],
+      [
+        "expo-image-picker",
+        {
+          "photosPermission": "The app accesses your photos to upload them for identification."
+        }
       ]
     ],
     "experiments": {
