--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
     "@firebasegen/default-connector": "file:dataconnect-generated/js/default-connector",
+    "@react-native-firebase/app": "^21.12.3",
+    "@react-native-firebase/auth": "^21.12.3",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
+    "expo-camera": "~16.0.18",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -44,6 +47,7 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
+    "react-native-webview": "13.12.5"
     "react-native-webview": "13.12.5",
     "@react-native-picker/picker": "2.9.0"
   },
