--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@react-navigation/stack": "^7.2.3",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
+    "expo-build-properties": "~0.13.2",
     "expo-camera": "~16.0.18",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
@@ -41,12 +42,14 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-confetti-cannon": "^1.5.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-ratings": "^8.1.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
+
     "react-native-webview": "13.12.5",
     "expo-build-properties": "~0.13.2",
     "expo-file-system": "~18.0.12"
