--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.19",
     "@react-navigation/stack": "^7.2.3",
-    "@stripe/stripe-react-native": "^0.43.0",
+    "@stripe/stripe-react-native": "0.38.6",
     "expo": "~52.0.40",
     "expo-blur": "~14.0.3",
     "expo-build-properties": "~0.13.2",
